# AI-

./: buildozer.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-android.yml  build-apk.yml  build.yml  build_apk.yml
